Map model refactored